--- a/Build a Survey Form/style.css
+++ b/Build a Survey Form/style.css
@@ -4,21 +4,83 @@
     box-sizing: border-box;
 }
 
-body::before {
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    margin: 0;
+    color: white;
+}
+
+.container::before {
     content: '';
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
     width: 100%;
-    z-index: -1;
-    background-image: linear-gradient( 10deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)), url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    height: 100%;
+    background-image: linear-gradient(115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)), url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
     background-size: cover;
+    z-index: -1;
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.header {
+    width: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+}
+
+form {
+    width: 90%;
+    max-width: 600px;
+    background-color: rgba(27, 27, 50, 0.8);
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.form-group {
+    margin-bottom: 30px;
+}
+
+input[id],
+select,
+textarea {
     width: 100%;
-    margin: 40px auto 40px auto;
+    height: 40px;
+}
+
+label {
+    display: block;
+}
+
+.input {
+    display: inline;
+    margin: 5px;
+}
+
+textarea {
+    resize: vertical;
+    height: 80px;
+    margin-bottom: 20px;
+}
+
+button {
+    width: 100%;
+    text-align: center;
+    height: 40px;
+    background-color: #37af65;
+    cursor: pointer;
+    border-radius: 10px;
 }
